module form-edit-validation

--- a/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
@@ -35,8 +35,7 @@
     <script src="~/Scripts/module/table_tree_way.js"></script>
 
     <script src="~/Scripts/module/form_validation.js"></script>
-    <script src="~/Scripts/module/form_dir_way.js"></script>
-
+    <script src="~/Scripts/module/form_edit.js"></script>
     <script src="~/Scripts/module/table_dir_way.js"></script>
 
 
@@ -89,6 +88,78 @@
         </div>
     </div>
 </nav>
+
+<!--<div class="row">
+    <div class="col-xl-12">
+        <form id="test" class="needs-validation" novalidate>
+            <div class="alert" id="test-alert"></div>
+            <div class="form-row">
+                <div class="col-md-4 mb-3">
+                    <label for="validationCustom01">First name</label>
+                    <input type="text" class="form-control" id="validationCustom01" name="validationCustom01" placeholder="First name" value="Mark" required>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <label for="validationCustom02">Last name</label>
+                    <input type="text" class="form-control" id="validationCustom02" name="validationCustom02" placeholder="Last name" value="Otto" required>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <label for="validationCustomUsername">Username</label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">-->
+                            @*<span class="input-group-text" id="inputGroupPrepend">@</span>*@
+                        <!--</div>
+                        <input type="text" class="form-control" id="validationCustomUsername" name="validationCustomUsername" placeholder="Username" aria-describedby="inputGroupPrepend" required>
+                        <div class="invalid-feedback">
+                            Please choose a username.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="col-md-6 mb-3">
+                    <label for="validationCustom03">City</label>
+                    <input type="text" class="form-control" id="validationCustom03" name="validationCustom03" placeholder="City" required>
+                    <div class="invalid-feedback">
+                        Please provide a valid city.
+                    </div>
+                </div>
+                <div class="col-md-3 mb-3">
+                    <label for="validationCustom04">State</label>
+                    <input type="text" class="form-control" id="validationCustom04" name="validationCustom04" placeholder="State" required>
+                    <div class="invalid-feedback">
+                        Please provide a valid state.
+                    </div>
+                </div>
+                <div class="col-md-3 mb-3">
+                    <label for="validationCustom05">Zip</label>
+                    <input type="text" class="form-control" id="validationCustom05" name="validationCustom05" placeholder="Zip" required>
+                    <div class="invalid-feedback">
+                        Please provide a valid zip.
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" name="invalidCheck" id="invalidCheck" required>
+                    <label class="form-check-label" for="invalidCheck">
+                        Agree to terms and conditions
+                    </label>
+                    <div class="invalid-feedback">
+                        You must agree before submitting.
+                    </div>
+                </div>
+            </div>
+            <button class="btn btn-primary" type="submit">Submit form</button>
+        </form>
+    </div>
+</div>-->
+
 <div class="container-fluid">
     <div class="alert" id="main-alert"></div>
     <div class="row">
@@ -191,10 +262,15 @@
         </div>
     </div>
 </div>
+
+
+
 @*Button trigger modal*@
 <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#em-dir-way">
     Launch demo modal
 </button>
+
+
 @*Modal*@
 <div class="modal fade" id="em-dir-way" tabindex="-1" aria-labelledby="ml-dir-way" aria-hidden="true">
     <div class="modal-dialog">
@@ -225,12 +301,12 @@
                     <div class="form-row">
                         <div class="col-xl-6 mb-1">
                             @*<div class="form-group">*@
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
-                                    <label class="form-check-label" for="invalidCheck2">
-                                        Agree to terms and conditions
-                                    </label>
-                                </div>
+                            <div class="form-check">
+                                <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
+                                <label class="form-check-label" for="invalidCheck2">
+                                    Agree to terms and conditions
+                                </label>
+                            </div>
                             @*</div>*@
                         </div>
                     </div>
@@ -245,6 +321,8 @@
         </div>
     </div>
 </div>
+
+
 
 
 
