new init fields form_edit

--- a/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
@@ -35,7 +35,9 @@
     <script src="~/Scripts/module/table_tree_way.js"></script>
 
     <script src="~/Scripts/module/form_validation.js"></script>
-    <script src="~/Scripts/module/form_edit.js"></script>
+
+    <script src="~/Scripts/module/modal_edit_form.js"></script> <!-- Новая -->
+    <script src="~/Scripts/module/form_edit.js"></script> <!-- Старая удалить -->
     <script src="~/Scripts/module/table_dir_way.js"></script>
 
 
@@ -112,8 +114,8 @@
                     <label for="validationCustomUsername">Username</label>
                     <div class="input-group">
                         <div class="input-group-prepend">-->
-                            @*<span class="input-group-text" id="inputGroupPrepend">@</span>*@
-                        <!--</div>
+@*<span class="input-group-text" id="inputGroupPrepend">@</span>*@
+<!--</div>
                         <input type="text" class="form-control" id="validationCustomUsername" name="validationCustomUsername" placeholder="Username" aria-describedby="inputGroupPrepend" required>
                         <div class="invalid-feedback">
                             Please choose a username.
