1. new module modal-confirm
2. module table_dir_ways
   - dever funct delete, add, down, up

--- a/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
@@ -34,9 +34,10 @@
     <script src="~/Scripts/module/cblist_station.js"></script>
     <script src="~/Scripts/module/table_tree_way.js"></script>
 
+    <script src="~/Scripts/module/modal_confirm_form.js"></script> <!-- Форма сообщений подтверждения -->
     <script src="~/Scripts/module/form_validation.js"></script>
+    <script src="~/Scripts/module/modal_edit_form.js"></script> <!-- Форма для правки -->
 
-    <script src="~/Scripts/module/modal_edit_form.js"></script> <!-- Новая -->
     <script src="~/Scripts/module/table_dir_way.js"></script>
 
 
@@ -277,7 +278,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="ml-dir-way">VVV</h5>
+                <h5 class="modal-title font-weight-bold" id="ml-dir-way">VVV</h5>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                     <span aria-hidden="true">&times;</span>
                 </button>
