setup css style of directory form

--- a/WEB_UI/Areas/Directory/Views/Home/Cargo.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/Cargo.cshtml
@@ -30,7 +30,7 @@
         <div class="col-xl-12">
             <div class="card border-dark mb-3">
                 <div class="card-header bg-secondary text-white">@DirectoryResource.cargo_title</div>
-                <div class="card-body text-dark pl-3 pr-3">
+                <div class="card-body text-dark pl-3 pr-3 table-directory">
                     <table class="display compact hover row-border" id="table-directory" style="width:100%;"></table>
                 </div>
             </div>
