--- a/WEB_UI/Areas/Directory/Views/Home/Cars.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/Cars.cshtml
@@ -197,9 +197,9 @@
         <div class="col-xl-12">
             <div class="card border-dark">
                 <div class="card-header bg-secondary text-white text-uppercase">@DirectoryResource.cars_title</div>
-                <div class="card-body text-dark pl-3 pr-3">
+                <div class="card-body text-dark pl-3 pr-3 table-directory">
                     <div class="row">
-                        <div class="col-xl-12" style="font-size:13px">
+                        <div class="col-xl-12">
                             <table id="table-directory" class="display compact hover row-border cell-border" style="width:100%;table-layout: fixed"></table>
                         </div>
                     </div>
