--- a/WEB_UI/Areas/Directory/Views/Home/ParkState.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/ParkState.cshtml
@@ -44,12 +44,12 @@
                             <div class="container-fluid">
                                 <form class="form-inline">
                                     <label class="col-form-label text-white mr-2" for="select_station">@DirectoryResource.title_station:</label>
-                                    <select type="text" id="select_station" name="select_station" class="form-control mr-3" style="font-size:1.5rem"></select>
+                                    <select type="text" id="select_station" name="select_station" class="form-control mr-3"></select>
                                     <label class="col-form-label text-white mr-2" for="select_park_status">@DirectoryResource.title_park_status:</label>
-                                    <select type="text" id="select_park_status" name="select_park_status" class="form-control mr-3" style="font-size:1.5rem"></select>
+                                    <select type="text" id="select_park_status" name="select_park_status" class="form-control mr-3"></select>
                                     <button type="button" class="btn btn-danger mr-3" id="delete_park_status" disabled>@DirectoryResource.title_delete</button>
                                     <label class="col-form-label text-white mr-2" for="input_park_status_on_dt" disabled>@DirectoryResource.title_park_status_on_dt:</label>
-                                    <input type="datetime" id="input_park_status_on_dt" name="input_park_status_on_dt" class="form-control mr-3" style="font-size:1.5rem" disabled />
+                                    <input type="datetime" id="input_park_status_on_dt" name="input_park_status_on_dt" class="form-control mr-3" disabled />
                                     <button type="button" class="ml-1 btn btn-warning" id="set_7">7:00</button>
                                     <button type="button" class="ml-1 btn btn-warning" id="set_19">19:00</button>
                                     <button type="button" class="ml-2 btn btn-primary" id="create_park_status" disabled>@DirectoryResource.title_create</button>
@@ -58,7 +58,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card-body text-dark pl-3 pr-3" style="font-size:1.3rem">
+                <div class="card-body text-dark pl-3 pr-3 table-directory">
                     <div class="card">
                         <div class="card-header" id="park_state_info" style="text-transform:uppercase">
                             @*На <label id="curent_date"></label> подключилось : <label id="client_count"></label> клиентов.*@
