--- a/WEB_UI/Areas/Directory/Views/Home/WagonMarking.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/WagonMarking.cshtml
@@ -40,19 +40,19 @@
                                 <form class="form-inline">
                                     <label class="col-form-label text-white mr-2" for="select_date">Выбрать период: </label>
                                     <span id="select_date">
-                                        <input type="datetime" class="form-control" id="date_start" name="date_start" style="font-size:1.5rem">
-                                        <input type="datetime" class="form-control" id="date_stop" name="date_stop" style="font-size:1.5rem">
+                                        <input type="datetime" class="form-control" id="date_start" name="date_start">
+                                        <input type="datetime" class="form-control" id="date_stop" name="date_stop">
                                     </span>
                                     <label class="col-form-label text-white mr-2" for="select_station">Станция прибытия: </label>
-                                    <select type="text" id="select_station" name="select_station" class="form-control" style="font-size:1.5rem"></select>
+                                    <select type="text" id="select_station" name="select_station" class="form-control"></select>
                                     <label class="col-form-label text-white mr-2" for="select_doc">Номер документа: </label>
-                                    <select type="text" id="select_doc" name="select_doc" class="form-control" style="font-size:1.5rem"></select>
+                                    <select type="text" id="select_doc" name="select_doc" class="form-control"></select>
                                 </form>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="card-body text-dark pl-3 pr-3" style="font-size:1.3rem">
+                <div class="card-body text-dark pl-3 pr-3 table-directory">
                     <div class="card">
                         <div class="card-header" id="sostav_info">
 
