--- a/WEB_UI/Areas/Directory/Views/Home/ExternalStation.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/ExternalStation.cshtml
@@ -37,7 +37,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="card-body text-dark pl-3 pr-3" style="font-size:1.3rem">
+                <div class="card-body text-dark pl-3 pr-3 table-directory">
                     <div class="row">
                         <div class="col-xl-12 text-center">
                             <table id="table-directory" class="display compact cell-border row-border hover" style="width:100%"></table>
