--- a/WEB_UI/Areas/Directory/Views/Home/PresentWagonMarking.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/PresentWagonMarking.cshtml
@@ -40,28 +40,26 @@
                                 <form class="form-inline">
                                     <label class="col-form-label text-white mr-2" for="select_date">Выбрать период: </label>
                                     <span id="select_date">
-                                        <input type="datetime" class="form-control" id="date_start" name="date_start" style="font-size:1.5rem">
-                                        <input type="datetime" class="form-control" id="date_stop" name="date_stop" style="font-size:1.5rem">
+                                        <input type="datetime" class="form-control" id="date_start" name="date_start">
+                                        <input type="datetime" class="form-control" id="date_stop" name="date_stop">
                                     </span>
                                     <label class="col-form-label text-white mr-2" for="select_station">Станция прибытия: </label>
-                                    <select type="text" id="select_station" name="select_station" class="form-control" style="font-size:1.5rem"></select>
-                                    @*<label class="col-form-label text-white mr-2" for="select_doc">Номер документа: </label>
-                                    <select type="text" id="select_doc" name="select_doc" class="form-control" style="font-size:1.5rem"></select>*@
+                                    <select type="text" id="select_station" name="select_station" class="form-control"></select>
                                 </form>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="card-body text-dark pl-3 pr-3" style="font-size:1.3rem">
+                <div class="card-body text-dark pl-3 pr-3 table-directory">
                     <div class="card">
                         <div class="card-header" id="sostav_info"></div>
-                        <div class="card-body">
+                        <div class="card-body table-directory">
                             <div class="row">
                                 <div class="col-xl-4">
                                     <fieldset class="border-primary">
                                         <legend class="text-primary">Предъявленные составы</legend>
                                         <div class="row">
-                                            <div class="col-xl-12" style="font-size:1.2rem">
+                                            <div class="col-xl-12">
                                                 <table class="display compact table-striped table-hover" id="table-sostav" style="width:100%;"></table>
                                             </div>
                                         </div>
@@ -77,16 +75,6 @@
                                         </div>
                                     </fieldset>
                                 </div>
-                                @*<div class="col-xl-4" style="font-size:13px">
-                                        <form>
-                                            <div class="row">
-                                                <div class="col-xl-12">
-                                                    <label for="edit_note_vagonnik" class="col-form-label">@DirectoryResource.title_edit_note_vagonnik:</label>
-                                                    <textarea class="form-control" id="edit_note_vagonnik" name="edit_note_vagonnik" rows="10" style="font-size:13px"></textarea>
-                                                </div>
-                                            </div>
-                                        </form>
-                                    </div>*@
                             </div>
                         </div>
                     </div>
