--- a/WEB_UI/Areas/Directory/Views/Home/SearchWagon.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/SearchWagon.cshtml
@@ -58,14 +58,14 @@
                             <div class="container-fluid">
                                 <form class="form-inline">
                                     <label class="col-form-label text-white mr-2" for="num_wagon">Найти вагон:</label>
-                                    <input class="form-control mr-sm-2" id="num_wagon" name="num_wagon" type="number" style="font-size:1.5rem;" placeholder="Номер вагона" aria-label="Search">
+                                    <input class="form-control mr-sm-2" id="num_wagon" name="num_wagon" type="number" placeholder="Номер вагона" aria-label="Search">
                                     <button class="btn btn-primary my-2 my-sm-0" id="bt_search_wagon" name="bt_search_wagon" type="submit">Search</button>
                                 </form>
                             </div>
                         </div>
                     </div>
                 </div>
-                <div class="card-body text-dark pl-3 pr-3">
+                <div class="card-body text-dark pl-3 pr-3 table-directory">
                     <div class="row">
                         <div class="col-xl-12">
                             <ul class="nav nav-pills mb-3" id="pills-tab" role="tablist">
