add form directory ways

--- a/WEB_UI/Areas/Directory/Views/Shared/_IDSDirectory.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Shared/_IDSDirectory.cshtml
@@ -93,7 +93,7 @@
                             <li class="see-all"><a href="#">Общие</a></li>
                             <li><a href="#" class="disabled">Внутрение станции</a></li>
                             <li><a href="#" class="disabled">Парки</a></li>
-                            <li><a href="#" class="disabled">Пути</a></li>
+                            <li><a href='@Url.Action("Ways", "Home", new { Area = "Directory" })'>Пути</a></li>
                             <li><a href="#" class="disabled">Подразделения</a></li>
                             <li><a href="#" class="disabled">Типы подразделений</a></li>
                         </ul>
