new update is ids_direc

--- a/WEB_UI/Areas/Directory/Views/Home/Ways.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/Ways.cshtml
@@ -21,6 +21,7 @@
     <script src="~/Scripts/view/shared/common.js"></script> <!-- Общая библиотека методов программы -->
     <script src="~/Scripts/api/shared.js"></script> <!-- Общая библиотека методов API -->
     <script src="~/Scripts/api/ids_directory.js"></script> <!-- Class API ИДС Справочники -->
+    <script src="~/Scripts/api/ids_direct.js"></script> <!-- Class API ИДС Справочники -->
     <!-- модули -->
     <script src="~/Scripts/module/common.js"></script>
     <script src="~/Scripts/module/form_validation.js"></script>
