--- a/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
@@ -10,8 +10,8 @@
     <link href="~/Content/module/cblist_station.css" rel="stylesheet" />
     <link href="~/Content/module/table_tree_way.css" rel="stylesheet" />
 
-    <link href="~/Content/module/table_dir_way.css" rel="stylesheet" />
-    <link href="~/Content/module/modal_edit_form.css" rel="stylesheet" />
+    <link href="~/Content/module/directory/table_dir_way.css" rel="stylesheet" />
+    <link href="~/Content/module/shared/modal_edit_form.css" rel="stylesheet" />
 }
 
 @section scripts {
@@ -30,17 +30,19 @@
     <script src="~/Scripts/api/ids_transfer.js"></script> <!-- Class API ИДС Переносы -->
     <script src="~/Scripts/api/uz_sms.js"></script> <!-- Class API Работа с модулем согласования -->
 
-    <script src="~/Scripts/module/common.js"></script>
+    <script src="~/Scripts/module/shared/common.js"></script>
+
+    <script src="~/Scripts/api/ids_direct.js"></script>
 
     <script src="~/Scripts/module/cblist_station.js"></script>
     <script src="~/Scripts/module/table_tree_way.js"></script>
 
-    <script src="~/Scripts/module/modal_confirm_form.js"></script> <!-- Форма сообщений подтверждения -->
-    <script src="~/Scripts/module/form_validation.js"></script>
-    <script src="~/Scripts/module/modal_edit_form.js"></script> <!-- Форма для правки -->
+    <script src="~/Scripts/module/shared/modal_confirm_form.js"></script> <!-- Форма сообщений подтверждения -->
+    <script src="~/Scripts/module/shared/form_validation.js"></script>
+    <script src="~/Scripts/module/shared/modal_edit_form.js"></script> <!-- Форма для правки -->
 
-    <script src="~/Scripts/module/table_dir_way.js"></script>
-
+    <script src="~/Scripts/module/directory/table_dir_way.js"></script>
+    <script src="~/Scripts/module/directory/table_dir_park.js"></script>
 
     <script src="~/Scripts/plugins/pl_dialog_confirm.js"></script> <!-- Плагин -->
     <script src="~/Scripts/view/idsrwt/test.js"></script>
@@ -251,7 +253,8 @@
                                 <div class="card-body" style="font-size:13px">
                                     <div class="row">
                                         <div class="col-xl-12">
-                                            <div id="ways"></div>
+                                            @*<div id="ways"></div>*@
+                                            <div id="park"></div>
                                             @*<table id="wagons-way" class="display compact table-striped table-hover" style="width:100%;table-layout: fixed"></table>*@
                                         </div>
                                     </div>
