module table_dir_park_station  add field count ways  add table_dir_park_station.css

--- a/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
@@ -13,6 +13,8 @@
     <link href="~/Content/module/directory/table_dir_way.css" rel="stylesheet" />
     <link href="~/Content/module/shared/modal_edit_form.css" rel="stylesheet" />
     <link href="~/Content/module/directory/table_dir_park_ways.css" rel="stylesheet" />
+    <link href="~/Content/module/directory/table_dir_park_station.css" rel="stylesheet" />
+
 }
 
 @section scripts {
