update form dir ways add functional insert / update park - way

--- a/WEB_UI/Areas/Directory/Views/Home/Ways.cshtml
+++ b/WEB_UI/Areas/Directory/Views/Home/Ways.cshtml
@@ -52,11 +52,11 @@
                                 <form class="form-inline">
                                     <div class="form-group mb-2">
                                         <label class="col-form-label text-white mr-2" for="station">Станция :</label>
-                                        <select class="form-control" id="station" name="station" required></select>
+                                        <select class="form-control" id="station" name="station" placeholder="Выберите..." required></select>
                                     </div>
                                     <div class="form-group mx-sm-3 mb-2">
                                         <label class="col-form-label text-white mr-2" for="park">Парк :</label>
-                                        <select class="form-control" id="park" name="park" required></select>
+                                        <select class="form-control" id="park" name="park" placeholder="Выберите..." required></select>
                                     </div>
                                     <button type="submit" class="btn btn-primary mb-2" id="view_ways" name="view_ways">Показать</button>
                                 </form>
