--- a/WEB_UI/Content/module/shared/modal_edit_form.css
+++ b/WEB_UI/Content/module/shared/modal_edit_form.css
@@ -33,3 +33,13 @@
         .date-picker-wrapper .gap .gap-bottom-mask {
             z-index: 1103;
         }
+
+
+li.new {
+    color:red;
+    font-style:italic;
+}
+li.exist {
+    color: green;
+    font-weight:600;
+}
