--- a/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
@@ -14,6 +14,7 @@
         <link href="~/Content/module/shared/modal_edit_form.css" rel="stylesheet" />
         <link href="~/Content/module/directory/table_dir_park_ways.css" rel="stylesheet" />
         <link href="~/Content/module/directory/table_dir_park_station.css" rel="stylesheet" />*@
+    <link href="~/Content/module/wsd/table_cars_operation.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/operation_send.css" rel="stylesheet" />
 
     <style>
@@ -58,6 +59,7 @@
     <script src="~/Scripts/api/ids_direct.js"></script>
     <script src="~/Scripts/api/ids_wsd.js"></script>
 
+    <script src="~/Scripts/module/wsd/table_cars_operation.js"></script>
     <script src="~/Scripts/module/wsd/operation_send.js"></script>
     <script src="~/Scripts/view/idsrwt/test.js"></script>
 
@@ -263,71 +265,76 @@
                 </div>
 
             </div>
-            <div class="card-footer bg-transparent border-dark"></div>
-        </div>
-    </div>
-
-
-
-
-    @*Button trigger modal*@
-    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#em-dir-way">
-        Launch demo modal
-    </button>
-
-
-    @*Modal*@
-    <div class="modal fade" id="em-dir-way" tabindex="-1" aria-labelledby="ml-dir-way" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title font-weight-bold" id="ml-dir-way">VVV</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-                        <span aria-hidden="true">&times;</span>
-                    </button>
+            <div class="row">
+                <div class="col-xl-12 mb-1 mt-1">
+                    <div id="cars-oper"></div>
                 </div>
-                <div class="modal-body">
-                    <form class="needs-validation" novalidate>
-                        <div class="form-row">
-                            <div class="col-xl-12 mb-1">
-                                <div class="alert" id="modal-alert"></div>
-                            </div>
+            </div>
+                    <div class="card-footer bg-transparent border-dark"></div>
+                </div>
+            </div>
+
+
+
+
+            @*Button trigger modal*@
+            <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#em-dir-way">
+                Launch demo modal
+            </button>
+
+
+            @*Modal*@
+            <div class="modal fade" id="em-dir-way" tabindex="-1" aria-labelledby="ml-dir-way" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h5 class="modal-title font-weight-bold" id="ml-dir-way">VVV</h5>
+                            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                <span aria-hidden="true">&times;</span>
+                            </button>
                         </div>
-                        <div class="form-row">
-                            <div class="col-xl-12 mb-1 text-left">
-                                <label for="ref_unit" class="col-form-label">Ремонтируемый агрегат:</label>
-                                <div class="input-group">
-                                    <input class="form-control" id="ref_unit" name="ref_unit" required>
-                                    <div class="input-group-append">
-                                        <button class="btn btn-outline-secondary" type="button">Button</button>
+                        <div class="modal-body">
+                            <form class="needs-validation" novalidate>
+                                <div class="form-row">
+                                    <div class="col-xl-12 mb-1">
+                                        <div class="alert" id="modal-alert"></div>
                                     </div>
                                 </div>
-                                <div class="invalid-feedback">
-                                    Укажите агрегат!
+                                <div class="form-row">
+                                    <div class="col-xl-12 mb-1 text-left">
+                                        <label for="ref_unit" class="col-form-label">Ремонтируемый агрегат:</label>
+                                        <div class="input-group">
+                                            <input class="form-control" id="ref_unit" name="ref_unit" required>
+                                            <div class="input-group-append">
+                                                <button class="btn btn-outline-secondary" type="button">Button</button>
+                                            </div>
+                                        </div>
+                                        <div class="invalid-feedback">
+                                            Укажите агрегат!
+                                        </div>
+                                    </div>
                                 </div>
-                            </div>
-                        </div>
-                        <div class="form-row">
-                            <div class="col-xl-6 mb-1">
-                                @*<div class="form-group">*@
-                                <div class="form-check">
-                                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
-                                    <label class="form-check-label" for="invalidCheck2">
-                                        Agree to terms and conditions
-                                    </label>
+                                <div class="form-row">
+                                    <div class="col-xl-6 mb-1">
+                                        @*<div class="form-group">*@
+                                        <div class="form-check">
+                                            <input class="form-check-input" type="checkbox" value="" id="invalidCheck2" required>
+                                            <label class="form-check-label" for="invalidCheck2">
+                                                Agree to terms and conditions
+                                            </label>
+                                        </div>
+                                        @*</div>*@
+                                    </div>
                                 </div>
-                                @*</div>*@
-                            </div>
-                        </div>
 
 
-                    </form>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-                    <button type="button" class="btn btn-primary">Save changes</button>
+                            </form>
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary">Save changes</button>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-</div>
