--- a/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/TEST.cshtml
@@ -218,7 +218,7 @@
         </div>
         <div class="card-body text-dark pl-3 pr-3">
             <div id="operation-send">
-                <div class="row">
+                @*<div class="row">
                     <div class="col-xl-12 mb-1 mt-1">
                         <div class="card border-secondary mb-1">
                             <div class="card-header">
@@ -262,7 +262,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
+                </div>*@
 
             </div>
             <div class="row">
