--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -10,6 +10,8 @@
     @*Подключим модули*@
     <link href="~/Content/module/cblist_station.css" rel="stylesheet" />
     <link href="~/Content/module/table_tree_way.css" rel="stylesheet" />
+    <link href="~/Content/module/wsd/table_cars_operation.css" rel="stylesheet" /><!-- CSS стили модуля "Таблица вагонов по операциям детально" -->
+    <link href="~/Content/module/wsd/operation_send.css" rel="stylesheet" /><!-- CSS стили модуля "Операции отправки вагонов на станции АМКР" -->
 
 
 }
@@ -29,9 +31,16 @@
     <script src="~/Scripts/api/ids_rwt.js"></script> <!-- Class API ИДС Прием вагонов -->
     <script src="~/Scripts/api/ids_transfer.js"></script> <!-- Class API ИДС Переносы -->
     <script src="~/Scripts/api/uz_sms.js"></script> <!-- Class API Работа с модулем согласования -->
-    @*Подключим модули*@
+
+    <script src="~/Scripts/api/ids_direct.js"></script><!-- Новая библиотека-модуль справочники ИДС -->
+    <script src="~/Scripts/api/ids_wsd.js"></script><!-- Новая библиотека-модуль для работы с данными WSD -->
+    @*================Подключим модули=============================================*@
+    <script src="~/Scripts/module/shared/common.js"></script>               <!-- Модуль Общих класов (для работы с формами и HTML) -->
+    <script src="~/Scripts/module/shared/modal_confirm_form.js"></script>   <!-- Модуль "Форма сообщений подтверждения" -->
     <script src="~/Scripts/module/cblist_station.js"></script>
     <script src="~/Scripts/module/table_tree_way.js"></script>
+    <script src="~/Scripts/module/wsd/table_cars_operation.js"></script>    <!-- Модуль "Таблица вагонов по операциям детально" -->
+    <script src="~/Scripts/module/wsd/operation_send.js"></script>          <!-- Модуль "Операции отправки вагонов на станции АМКР" -->
 
     <script src="~/Scripts/plugins/pl_dialog_confirm.js"></script> <!-- Плагин -->
 
@@ -54,7 +63,7 @@
                         Операции
                     </a>
                     <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="#">Операция-1</a>
+                        <a class="dropdown-item" id="operation-send" href="#">@IDSRWTResource.title_operation_send</a>
                         <a class="dropdown-item" href="#">Операция-2</a>
                         <a class="dropdown-item" href="#">Операция-3</a>
                     </div>
@@ -846,6 +855,10 @@
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <div id="rep-operation-send">
+
             </div>
         </form>
         <a href="#0" class="close cd-img-replace">Close</a>
