--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -12,8 +12,7 @@
     <link href="~/Content/module/table_tree_way.css" rel="stylesheet" />
     <link href="~/Content/module/wsd/table_cars_operation.css" rel="stylesheet" /><!-- CSS стили модуля "Таблица вагонов по операциям детально" -->
     <link href="~/Content/module/wsd/operation_send.css" rel="stylesheet" /><!-- CSS стили модуля "Операции отправки вагонов на станции АМКР" -->
-
-
+    <link href="~/Content/module/wsd/view_send_cars.css" rel="stylesheet" /><!-- CSS стили модуля "Окно выполнения операции отправки составов по АМКР" -->
 }
 
 @section scripts {
@@ -42,6 +41,8 @@
     <script src="~/Scripts/module/wsd/table_cars_operation.js"></script>    <!-- Модуль "Таблица вагонов по операциям детально" -->
     <script src="~/Scripts/module/wsd/operation_send.js"></script>          <!-- Модуль "Операции отправки вагонов на станции АМКР" -->
     <script src="~/Scripts/module/wsd/operation_arrival.js"></script>        <!-- Модуль "Операции g вагонов на станции АМКР" -->
+
+    <script src="~/Scripts/module/wsd/view_send_cars.js"></script>          <!-- Модуль "Окно выполнения операции отправки составов по АМКР" -->
 
     <script src="~/Scripts/plugins/pl_dialog_confirm.js"></script> <!-- Плагин -->
 
@@ -105,6 +106,7 @@
                                         <div class="btn-group mr-2" role="group" aria-label="First group">
                                             <button type="button" class="btn btn-outline-secondary" title="Принять состав на станцию" id="arrival">Приб.</button>
                                             <button type="button" class="btn btn-outline-secondary" title="Отправить состав со станции" id="sending">Отпр.</button>
+                                            <button type="button" class="btn btn-outline-secondary" title="Отправить состав со станции" id="send-sars">Отпр1.</button>
                                             <button type="button" class="btn btn-outline-secondary" title="Дислокация вагонов по станции" id="dislocation">Дисл.</button>
                                             <button type="button" class="btn btn-outline-secondary" title="Роспуск вагонов" id="dissolution">Росп.</button>
                                             <button type="button" class="btn btn-outline-secondary" title="">Выгр.</button>
@@ -863,6 +865,10 @@
             <div id="rep-operation-arrival">
 
             </div>
+            <div id="operation-send-cars">
+
+            </div>
+
         </form>
         <a href="#0" class="close cd-img-replace">Close</a>
     </div>
