--- a/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
+++ b/WEB_UI/Areas/IDSRWT/Views/Home/WSD.cshtml
@@ -159,6 +159,7 @@
                                 <div class="card-body" style="font-size:13px">
                                     <div class="row">
                                         <div class="col-xl-12">
+                                            <div id="wagons"></div>
                                             <table id="wagons-way" class="display compact table-striped table-hover" style="width:100%;table-layout: fixed"></table>
                                         </div>
                                     </div>
