--- a/WEB_UI/Content/module/wsd/table_cars_way.css
+++ b/WEB_UI/Content/module/wsd/table_cars_way.css
@@ -1,2 +1,26 @@
 ﻿body {
 }
+
+table.dataTable tbody td.mw-50 {
+    max-width: 50px;
+}
+table.dataTable tbody td.mw-100 {
+    max-width: 100px;
+}
+table.dataTable tbody td.mw-150 {
+    max-width: 150px;
+}
+table.dataTable tbody td.mw-200 {
+    max-width: 200px;
+}
+table.dataTable tbody td.mw-250 {
+    max-width: 250px;
+}
+table.dataTable tbody td.mw-300 {
+    max-width: 300px;
+}
+table.dataTable tbody td.shorten {
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
+}
